# bytestore

./: manage.py  pyproject.toml  pytest.ini
bytestore/: asgi.py  urls.py  wsgi.py
bytestore/settings/: base.py  production.py
product/: admin.py  models.py  serializers.py  views.py
product/migrations/: 0001_initial.py
