[tool.poetry]
name = "bytestore"
version = "0.1.0"
description = ""
authors = ["Gustavo Gomes <120190910+devgugga@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
django-mptt = "^0.16.0"
black = "^24.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
